--- a/views/info.ejs
+++ b/views/info.ejs
@@ -21,6 +21,10 @@
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
+
+<!-- Tailwind CSS -->
+<link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"rel="stylesheet"/>
+
 <!-- Public CSS -->
 <!-- <link rel="stylesheet" href="css\info-style.css"> -->
 <link rel="stylesheet" href="css\info\info-style.css">
@@ -60,8 +64,10 @@
         </section>
     </section>
   </main>
-  <!--Sidebar-->
-  <%- include('partials/yobee-nav') %>
+  <!-- Sidebar
+  <%- include('partials/yobee-nav') %> -->
+    <!-- Nav Bar -->
+    <%- include('partials/main-nav') %>
 
 </body>
 </html>
