--- a/views/partials/main-nav.ejs
+++ b/views/partials/main-nav.ejs
@@ -1,4 +1,4 @@
-<section class='w-full md:w-1/12 xl:w-2/12 2xl:w-48 px-2 md:py-2 fixed bottom-0 md:top-0 md:left-0 bg-gray-900 '>
+<section class='w-full md:w-1/12 xl:w-2/12 2xl:w-48 px-2 md:py-2 fixed bottom-0 md:top-0 md:left-0 bg-gray-900 md:mr-8 '>
       <div
       class="md:h-full text-center inset-x-0 flex flex-row md:flex-column justify-center items-center ">      
         <ul class="list-reset flex flex-row w-11/12 md:flex-col md:h-3/4 items-center justify-evenly text-center">
@@ -19,7 +19,7 @@
           <li class="mr-3 md:mr-0 flex-1 xl:self-center">
             <a href="/profile"
               class="block py-1 md:py-3 pl-1 align-middle no-underline border-b-2 border-transparent hover:border-b-2 hover:border-pink-500">
-              <i class="fas fa-magic pr-0 text-indigo-200 hover:text-pink-500"></i><span
+              <i class="fa fa-user pr-0 text-indigo-200 hover:text-pink-500"></i><span
                 class=" hidden xl:inline-block pb-1 md:pb-0 xl:ml-3 text-xs md:text-base text-gray-400 font-semibold">Profile</span>
             </a>
           </li>
