separated profile stylesheet from addPost stylesheet

--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script src="https://kit.fontawesome.com/7cff8bdceb.js" crossorigin="anonymous"></script> -->
-    <!-- <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -33,15 +30,11 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
-    <!-- Tailwind CSS -->
-    <link
-      href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <!-- Tailwind CSS -->    
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- Public CSS -->
-    <link rel="stylesheet" href="/css/addPost/style.css" />
-    <!-- <link rel="stylesheet" href="/css/styles.css"> -->
+    <link rel="stylesheet" href="/css/profile/style.css" />
     <!-- <link rel="stylesheet" href="\css\post\post-style.css"> -->
   </head>
   <body>
