linked correct tailwind stylesheet and removed cdn link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,14 +13,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" />
 
-    <!-- Tailwind -->
-    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-
+    
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     
+    <!-- Tailwind CSS -->    
+    <link rel="stylesheet" href="/css/styles.css">
+
     <!-- Public CSS -->
-    <link rel="stylesheet" href="css/styles.css" />
+    
 
   </head>
   <body class="bg-white-600 font-family-karla h-screen">
