--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -30,11 +30,8 @@
 			crossorigin="anonymous"
 		/>
 
-		<!-- Tailwind CSS -->
-		<link
-			href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
-			rel="stylesheet"
-		/>
+		<!-- Tailwind CSS -->    
+		<link rel="stylesheet" href="/css/styles.css">
 
 		<!-- Public CSS -->
 		<link rel="stylesheet" href="css/feed/style.css" />
