--- a/views/post.ejs
+++ b/views/post.ejs
@@ -9,10 +9,9 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-
     
-		<!-- Tailwind CSS -->
-		<link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
+		<!-- Tailwind CSS -->    
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- Public CSS -->
     <!-- <link rel="stylesheet" href="/css/posts/style.css" /> -->
