troubleshooting twitch clip on info view

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -38,7 +38,7 @@
         <h1>Learn With Leon's Resources</h1>
         <p>Want to Learn With Leon? Here are some resources to get you started on your learning to code journey! Everything is completely free--Leon does not charge for this awesome education. Change your life and check out these links:</p>
 
-        <iframe class="sup" src="https://clips.twitch.tv/embed?clip=DependableSincerePigShazBotstix-MJNbKJE0poV_AJkR&parent=herokuapp.com&parent=thenungram.herokuapp.com/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        <iframe class="sup" src="https://clips.twitch.tv/embed?clip=DependableSincerePigShazBotstix-MJNbKJE0poV_AJkR&parent=thenungram.herokuapp.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
 
     </section>
     <section class="container links">
