--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -43,12 +43,11 @@
 			<div class="w-full md:w-5/6 bg-gray-100">
 				<div class="container bg-gray-100 pt-16 px-6">
 					<% for (post of posts) { %>
-					<div class="tm-content-div border-solid border-4 border-purple-600">
+					<div class="tm-content-div">
 						<!-- <span>Caption: </span> -->
 						<h1>"<%= post.caption%>"</h1>
 						<div
-							class="
-								border-solid border-4 border-gray-600
+							class="								
 								container
 								md
 								flex
