--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,36 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title><%= post.caption %></title>
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    
-		<!-- Tailwind CSS -->    
-    <link rel="stylesheet" href="/css/styles.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+
+    <!-- Tailwind CSS -->
+    <link rel="stylesheet" href="/css/styles.css" />
 
     <!-- Public CSS -->
-    <!-- <link rel="stylesheet" href="/css/posts/style.css" /> -->
-    <link rel="stylesheet" href="/css/addPost/style.css" />
+    <!-- Reusing Profile Style Sheet -->
+    <link rel="stylesheet" href="/css/profile/style.css" />
   </head>
   <body>
     <!-- Renders a single Post -->
-
-      <h1 class='caption'><%= post.caption %></h1>
-      <span class='author'>Author: <%= post.author%> </span>
-      <% if(post.clip != '') {%>
-        <div>
-            <iframe src='<%= post.clip %>'></iframe>
-            </div>
-              <% } else { %>
-                <div>
-              <img src='<%= post.image%>'/>
-            </div>
+    <div class="viewport-wrap">
+      <div class="vanilla-flex-row">
+        <section class="wrapper">
+          <div class="post-container">
+            <div class="post">
+              <span class="postCaption"><%= post.caption %></span>
+              <% if(post.image === null) { %>
+              <div class="flex justify-center">
+                <iframe
+                  class="twitch-clip"
+                  frameborder="0"
+                  src="<%= post.clip %>"
+                  height="480"
+                  width="720"
+                  allowfullscreen="true"
+                ></iframe>
+              </div>
+              <% } else{ %>
+              <a href="/post/<%= post._id%>">
+                <img class="object-contain" src="<%= post.image %>" />
+              </a>
               <% } %>
-        </div>
-
-          <div class='likes-container'>
+            </div>
+          </div>
+		<div class='likes-container'>
             <% if (post.likes) { %>
                 <span class='likes'><%= post.likes %></span>
             <% } %>
@@ -53,18 +68,11 @@
           </form>
           <% } %>
         </div>
-        <!-- <section class="column">
-          <section class="right">
-              <ul class="nav">
-                  <li><a href='/feed'>Feed</a></li>
-                  <li><a href='/profile'>Profile</a></li>
-                  <li><a href="/auth/logout">Logout</a></li>
-              </ul>
-          </section>
-      </section> -->
+        </section>
         <!-- Nav Bar -->
-    <%- include('partials/main-nav') %>
-        <!-- Iframe is causing page to break so nothing will show below it. Twitch allows you to directly src twitch clips SEE README -->
-      <script type='text/javascript' src="js/main.js"></script>
+        <%- include('partials/main-nav') %>
+      </div>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
